# SparseAutoEncoderInterp

./: .gitignore  README.md  RESEARCH.md  RESULTS.md  bootstrap.sh  brainstorm.md  pyproject.toml  requirements.txt
configs/: default.yaml  discovery.yaml  discovery_wildchat.yaml
docs/: HPC_PLAYBOOK.md  PROJECT.md
results/: README.md
results/data/: exp1_stripped.json  exp1_wildchat.json  exp2_stripped.json  exp2_wildchat.json  exp3_stripped.json  exp3_wildchat.json  h2_stripped.json  h2_wildchat.json  h3_stripped.json  h3_wildchat.json  mcmc_stripped.json  mcmc_wildchat.json
scripts/: 01_prepare_owt.sh  02_train_transformer.sh  03_generate_mlp_data.sh  04_train_sae.sh  check_separability.py  evaluate_html_artifact.py  extended_separability.py  extract_features.py  fetch_wildchat.py  make_plots.py  markov_chain.py  mcmc_conversations.py  run_hypothesis.py
slurm/: 00_env.sh  01_prepare_owt.sbatch  02_train_transformer.sbatch  03_generate_mlp_data.sbatch  04_train_sae.sbatch  05_extract_features.sbatch  06_check_separability.sbatch  07_extended_separability.sbatch  08_markov_chain.sbatch  09_experiments.sbatch  SETUP.md  submit_all.sh
src/scf/: __init__.py  coarsen.py  config.py  feature_extractor.py  sdl_bridge.py
src/scf/corpus/: __init__.py  sharegpt.py  synthetic.py  types.py
src/scf/hypotheses/: __init__.py  _io.py  exp1_poisson.py  exp2_clt.py  exp3_roles.py  h1_markovianity.py  h2_human_vs_ai.py  (+2 more)
tests/: run_tests.py  test_bayes_and_order_stats.py  test_coarsen.py  test_concentration.py  test_entropy.py  test_markov.py  test_poisson_and_mgf.py
(+10 files in other folders)
